--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "pod": "cd ios && pod install && cd ..",
+    "clean-android": "cd android && ./gradlew clean && cd .."
   },
   "dependencies": {
     "react": "19.1.0",
