--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "clean-android": "cd android && ./gradlew clean && cd .."
   },
   "dependencies": {
+    "@react-native-vector-icons/fontawesome6": "^12.2.0",
     "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
+    "axios": "^1.12.2",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.16.0"
+    "react-native-screens": "^4.16.0",
+    "react-native-size-matters": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
