--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-native-vector-icons/fontawesome6": "^12.2.0",
     "@react-native/new-app-screen": "0.81.4",
+    "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
     "axios": "^1.12.2",
