--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
     "clean-android": "cd android && ./gradlew clean && cd .."
   },
   "dependencies": {
+    "@apollo/client": "^4.0.7",
     "@react-native-vector-icons/fontawesome6": "^12.2.0",
-    "@react-native/new-app-screen": "0.81.4",
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
-    "axios": "^1.12.2",
+    "graphql": "^16.11.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
-    "react-native-size-matters": "^0.4.2"
+    "react-native-size-matters": "^0.4.2",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -36,6 +37,7 @@
     "@react-native/eslint-config": "0.81.4",
     "@react-native/metro-config": "0.81.4",
     "@react-native/typescript-config": "0.81.4",
+    "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
